Fixes multiple test failures